--- a/is322-final-project/src/styles/map/map.css
+++ b/is322-final-project/src/styles/map/map.css
@@ -1,17 +1,34 @@
 .apartment-button {
-    border: 1px solid white;
-    background-color: red;
-    color: white;
-    font-size: 15px;
+    /* background-color: #3e51b5; */
+    color: #3e51b5;
+    /* font-size: 40px; */
     z-index: -1!important;
     position: relative;
 }
-.form {
-    width: 20%;
-    height: 200px;
-    float: right!important;
-    background-color: red;
+.apartment-button:hover {
+    cursor: pointer;
+    transition: .2s;
+    transition-timing-function: ease-in-out;
+}
+.circle {
+    padding: 10px;
+    height: 40px!important;
+    width: 40px!important;
+    border-radius: 180px;
+    color: #f5f5f5!important;
+    background-color: #3e51b5;
+    margin-top: 2vh;
+    margin-right: 2vw;
     position: fixed;
-    border: 1px solid red;
+    left: 99%;
+    margin-left: -120px; /*half the width*/
     z-index: 999!important;
+    transition: .2s;
+    transition-timing-function: ease-in-out;
+}
+.circle:hover {
+    padding: 11px;
+    transition: .2s;
+    transition-timing-function: ease-in-out;
+    cursor: pointer;
 }
