--- a/is322-final-project/src/styles/map/map.css
+++ b/is322-final-project/src/styles/map/map.css
@@ -1,7 +1,5 @@
 .apartment-button {
-    /* background-color: #3e51b5; */
     color: #3e51b5;
-    /* font-size: 40px; */
     z-index: -1!important;
     position: relative;
 }
@@ -25,10 +23,13 @@
     z-index: 999!important;
     transition: .2s;
     transition-timing-function: ease-in-out;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, .6);
+
 }
 .circle:hover {
     padding: 11px;
     transition: .2s;
     transition-timing-function: ease-in-out;
     cursor: pointer;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, .6);
 }
