--- a/is322-final-project/src/styles/map/map.css
+++ b/is322-final-project/src/styles/map/map.css
@@ -1,5 +1,5 @@
 .apartment-button {
-    color: #3e51b5;
+    color: #DE3C4B;
     z-index: -1!important;
     position: relative;
 }
@@ -14,7 +14,7 @@
     width: 40px!important;
     border-radius: 180px;
     color: #f5f5f5!important;
-    background-color: #3e51b5;
+    background-color: #DE3C4B;
     margin-top: 2vh;
     margin-right: 2vw;
     position: fixed;
