--- a/is322-final-project/src/styles/map/restaurauntModal.css
+++ b/is322-final-project/src/styles/map/restaurauntModal.css
@@ -2,6 +2,7 @@
     height: min-content;
     width: 30vw;
     display: flex;
+    background-color: #fff;
     cursor: default;
     flex-direction: column;
 }
@@ -9,11 +10,8 @@
     width: 100%;
     display: flex;
     flex: .5;
-    padding: 2px;
-    background-color: #3e51b5;
-    color: #f5f5f5;
+    background-color: #fff;
     flex-direction: row;
-    margin-bottom: 1%;
 }
 @media screen and (min-width: 1900px) {
     .apartment-modal-container {
@@ -28,21 +26,29 @@
         flex-direction: column;
     }
 }
-.apartment-modal-banner__title {
-    font-size: 1.1rem;
-    font-family: 'Lato', Helvetica,Arial , sans-serif;
-    padding: 0;
-    margin: 0;
+.address-wrapper {
     display: flex;
     flex: 5;
+    /* flex-direction: column; */
+    padding: 0;
+    margin: 0;
+}
+.apartment-modal-banner__title {
+    font-size: 1.1rem;
+    font-weight: 900;
+	color: #323648;
+    margin-left: 5px;
+    font-family: 'Lato', Helvetica,Arial , sans-serif;
 }
 .favorite-icon {
     display: flex;
     flex: 1;
-    margin-top: 1%;
-    font-size: 1.8rem!important;
+    margin-top: 1.5%;
+    font-size: 2rem!important;
+    color: #DE3C4B!important;
 }
 .favorite-icon:hover {
+    color: rgb(197, 55, 69)!important;
     cursor: pointer;
 }
 .apartment-modal-details {
@@ -56,7 +62,7 @@
     display: flex;
     flex: 1;
     padding: 0px;
-    margin: 0px;
+    margin-top: 5px;
 }
 .right-side {
     display: flex;
@@ -68,35 +74,41 @@
 }
 .apartment-modal-photo {
     width: 100%;
-    height: auto;
+    height: 140px;
+    border-radius: 5px;
+}
+.right-side__name {
+    padding: 0px;
+    font-size: 1.1rem;
+    font-weight: 600;
+	color: #323648;
+    margin: 0px;
 }
 .right-side__price {
-    padding: 0px;
-    font-size: 1.6rem;
-    margin: 0px;
-}
-.right-side__beds {
-    padding: 0px;
+    padding: 0px!important;
+    margin: 0px!important;
+    widtH: 100%;
+    /* margin-right: 85%!important; */
+    font-size: .8rem;
     font-weight: 100;
     opacity: .7;
-    font-size: 1.1rem;
-    margin: 0px;
+    margin-top: 3px!important;
+    margin-bottom: 8px!important;
 }
-.right-side__square-feet {
+.right-side__rating {
     padding: 0px;
+    font-size: 1rem;
     font-weight: 100;
     opacity: .7;
-    font-size: 1.1rem;
     margin: 0px;
 }
-
 .view-details {
     text-decoration: none;
-    background-color: Red;
     width: 80%;
     color: #f5f5f5!important;
+    background-color: #DE3C4B!important;
     border-radius: 3px;
-    margin-top: 6%!important;
+    margin-top: 5%!important;
 }
 .view-details-link {
     color: #f5f5f5;
