--- a/is322-final-project/src/styles/slideShow.css
+++ b/is322-final-project/src/styles/slideShow.css
@@ -1,6 +1,5 @@
 .slide-container {
-    width: 25%;
-    margin: auto; 
+    width: 700px;
 }
   
   h3 {
@@ -11,18 +10,18 @@
     align-items: center;
     justify-content: center;
     background-size: cover;
-    height: 350px;
+    height: 60vh;
+    border-radius: 5px;
+    box-shadow: 0px 6px 15px rgba(34, 34, 34, 0.3);
+
   }
   .slide-image {
-      border: 1px solid red;
-      height: auto;
-      width: auto;  
-      image-rendering: crisp-edges;  }
+      width: 700px;
+      height: 100%; 
+     }
       
   .each-slide span {
-    /* padding: 20px; */
     font-size: 20px;
-    /* background: #efefef; */
     text-align: center;
   }
   
@@ -31,13 +30,12 @@
   }
   
   .each-fade .image-container {
-    width: 100%;
+    width: 600px;
     overflow: hidden;
   }
   
   .each-fade .image-container img {
-    width: 100%;
-  }
+    width: 600px  }
   
   .each-fade h2 {
     width: 25%;
@@ -45,5 +43,5 @@
     justify-content: center;
     align-items: center;
     margin: 0;
-    background: #adceed;
+    /* background: #adceed; */
   }
