--- a/is322-final-project/src/styles/restaurauntDetails.css
+++ b/is322-final-project/src/styles/restaurauntDetails.css
@@ -1,6 +1,3 @@
-.wrapper {
-    border: 1px solid red;
-}
 .header {
     display: flex;
     margin-top: 4%;
@@ -135,16 +132,14 @@
 }
 .reviews-location-hours-wrapper {
     width: 100%;
-    border: 1px solid red;
     display: flex;
     flex-direction: row;
+    margin-top: 5vh;
 }
 .reviews-container {
     display: flex;
     flex: 2;
-    border: 1px solid blue;
 }
 .location-and-hours-container {
     flex: 1;
-    border: 1px solid blue;    
 }
