--- a/is322-final-project/src/styles/map/restaurauntModal.css
+++ b/is322-final-project/src/styles/map/restaurauntModal.css
@@ -43,8 +43,9 @@
 .favorite-icon {
     display: flex;
     flex: 1;
-    margin-top: 1.5%;
-    font-size: 2rem!important;
+    margin-top: 1%;
+    margin-right: 1.5%;
+    font-size: 2.5rem!important;
     color: #DE3C4B!important;
 }
 .favorite-icon:hover {
