--- a/is322-final-project/src/styles/pageTabs.css
+++ b/is322-final-project/src/styles/pageTabs.css
@@ -51,14 +51,20 @@
 .page-tabs .nav-link {
     cursor: pointer;
 	/* color: #cac8c8; */
-    color: #9d9d9d;
+    color: #323648;
     opacity: .3;
     transition: .2s;
     font-family: 'Lato', Helvetica,Arial , sans-serif;
     font-weight: 600;
     transition-timing-function: ease-in-out;
+    padding: 7px;
+    border-radius: 3px;
 }
-
+.page-tabs .nav-link:hover {
+    /* color: red; */
+    background-color: #e1e5e5;
+    opacity: 1;
+}
 .page-tabs .nav-link.active {
 	/* color: #cac8c8; */
     color: #DE3C4B;
@@ -67,4 +73,9 @@
     /* font-weight: 500; */
     transition: .2s;
     transition-timing-function: ease-in-out;
+}
+.page-tabs .nav-link.active:hover {
+    color: #DE3C4B;
+    opacity: 1;
+    background-color: transparent;
 }
