--- a/is322-final-project/src/styles/pageTabs.css
+++ b/is322-final-project/src/styles/pageTabs.css
@@ -30,6 +30,12 @@
     font-family: 'Lato', Helvetica,Arial , sans-serif;
     transition-timing-function: ease-in-out;
 }
+.nav-title:hover {
+    background-color: transparent!important;
+}
+#nav-title:hover {
+    background-color: transparent!important;
+}
 .nav-item-wrapper {
     display: flex;
     margin:0;
