--- a/is322-final-project/src/styles/grid.css
+++ b/is322-final-project/src/styles/grid.css
@@ -1,5 +1,4 @@
 .grid-wrapper {
-    border: 1px solid red;
     display: flex;
     width: 100%;
     flex-direction: column;
@@ -35,4 +34,38 @@
       width: 20%;
       height: 50px;
       margin-left: 7.5%!important;
+    }
+
+    .show-filters-button {
+        background-color: #DE3C4B!important;
+      box-shadow: 0px 1px 10px rgba(34, 34, 34, 0.3)!important;
+      color: #fafafa!important;
+      width: 20%;
+      height: 35px;
+      margin-left: 7.5%!important;
+      margin-top: 2%!important;
+    }
+
+    @media (max-width: 600px) {
+      .restauraunts-wrapper {
+        width: 100%;
+        margin-left: 0;
+        flex-direction: column;
+      } 
+      .grid-title {
+        font-size: 1.5rem;
+        margin-left: 7.5%;
+        margin-top: 4%;
+    }
+      .show-filters-button {
+        width: 90%;
+        height: 45px;
+        margin-left: 7.5%!important;
+        margin-top: 5%!important;
+    }
+      .load-more-button {
+        width: 90%;
+        height: 50px;
+        margin-left: 7.5%!important;
+      }
     }
