--- a/is322-final-project/src/styles/restaurauntCard.css
+++ b/is322-final-project/src/styles/restaurauntCard.css
@@ -3,24 +3,32 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  height: 450px;
+  height: min-content;
   margin: 25px;
   margin-top: 10vh;
+  background-color: #f5f5f5;
+  transition: .2s;
+  box-shadow: 0px 1px 5px rgba(34, 34, 34, 0.3);
+  border-radius: 3px;
+}
+.restauraunt-card:hover {
+    box-shadow: 0px 4px 10px rgba(34, 34, 34, 0.3);
+    transition: .2s;
 }
 .image-wrapper {
-    height: 75%!important;
+    height: 300px!important;
     width: 100%;
-    border-radius: 5px;
-    box-shadow: 0px 1px 10px rgba(34, 34, 34, 0.3);
+    /* border-radius: 5px; */
 }
 .restauraunt-card__image {
     height: 100%;
     width: 100%;
-    border-radius: 5px;
+    /* border-radius: 5px; */
 }
 .card-content {
     /* border: 1px solid red; */
-    height: 20%;
+    height: 200px;
+    margin-left: 5%;
 }
 .name-wrapper {
     display: flex;
@@ -45,6 +53,7 @@
 .restauraunt-card-icon {
     display: flex;
     margin-top: -2.5%;
+    margin-right: 2%;
     font-size: 2.3rem!important;
     color: #DE3C4B!important;
     transition: .2s;
@@ -95,3 +104,44 @@
     margin-left: 0px!important;
     font-family: 'Lato', Helvetica,Arial , sans-serif;
 }
+
+@media (max-width: 600px) {
+    .restauraunt-card {
+        width: 95%;
+      }
+      .restauraunt-card-icon {
+        margin-top: -3%;
+        margin-right: 5%;
+        font-size:2.8rem!important;
+    }
+    .name-wrapper__name {
+        font-size: 1.5rem;
+    }
+    .restauraunt-price-categories {
+        font-size: 1.2rem;
+        font-weight: 100;
+        opacity: .7;
+        color: #323648;
+        padding: 0px;
+        margin: 0px;
+        /* flex: 5; */
+        float: left;
+        margin-top: 1vh!important;
+        margin-left: 0px!important;
+        font-family: 'Lato', Helvetica,Arial , sans-serif;
+    }
+    .restauraunt-location {
+        font-size: 1.2rem;
+        font-weight: 100;
+        opacity: .7;
+        color: #323648;
+        padding: 0px;
+        margin: 0px;
+        /* flex: 5; */
+        float: left;
+        clear: both;
+        margin-top: 1vh!important;
+        margin-left: 0px!important;
+        font-family: 'Lato', Helvetica,Arial , sans-serif;
+    }
+  }
