--- a/is322-final-project/src/styles/locationAndHours.css
+++ b/is322-final-project/src/styles/locationAndHours.css
@@ -14,3 +14,8 @@
     margin-bottom: 1vh;
     font-family: 'Lato', Helvetica,Arial , sans-serif;
 }
+@media (max-width: 600px) {
+    .location-and-hours-wrapper {
+        margin-left: 0px;
+    }
+}
