--- a/is322-final-project/src/styles/reviews.css
+++ b/is322-final-project/src/styles/reviews.css
@@ -45,3 +45,14 @@
     margin-top: 5px!important;
     margin-left: 20px;
 }
+@media (max-width: 600px) {
+    .reviews-wrapper {
+        margin-left: 0%;
+        margin-top: 15%;
+    }
+    .reviews-header {
+        display: flex;
+        flex-direction: row;
+        width: 95%;
+    }
+}
