--- a/is322-final-project/src/styles/slideShow.css
+++ b/is322-final-project/src/styles/slideShow.css
@@ -13,7 +13,6 @@
     height: 60vh;
     border-radius: 5px;
     box-shadow: 0px 6px 15px rgba(34, 34, 34, 0.3);
-
   }
   .slide-image {
       width: 700px;
@@ -44,4 +43,22 @@
     align-items: center;
     margin: 0;
     /* background: #adceed; */
+  }
+  @media (max-width: 600px) {
+    .slide-container {
+      width: 100%;
+  }
+  .each-slide > div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-size: cover;
+    height: 300px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 15px rgba(34, 34, 34, 0.3);
+  }
+  .slide-image {
+      width: 100%;
+      height: 100%; 
+     }
   }
