--- a/is322-final-project/src/styles/restaurauntDetails.css
+++ b/is322-final-project/src/styles/restaurauntDetails.css
@@ -16,9 +16,10 @@
 .title-wrapper {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap
 }
 .restauraunt-title {
-    font-size: 2.5rem;
+    font-size: 2.1rem;
     font-weight: 900;
     color: #323648;
     padding: 0;
@@ -31,7 +32,7 @@
     flex: 1;
     margin-top: -5%;
     margin-left: 10%;
-    font-size: 5rem!important;
+    font-size: 85px!important;
     color: #DE3C4B!important;
     transition: .2s;
 }
@@ -160,6 +161,7 @@
 }
 .location-and-hours-container {
     flex: 1;
+    padding-bottom: 75px;
 }
 
 @media (max-width: 600px) {
@@ -223,5 +225,49 @@
         width: 100%;
         margin-left:5%;
         flex-direction: column-reverse;
+    }
+}
+
+@media screen and (min-width: 1900px) {
+    .restauraunt-title {
+        font-size: 2.8rem;
+    }
+    .restauraunt-details-favorite-icon {
+        display: flex;
+        flex: 1;
+        margin-top: -6%;
+        margin-left: 10%;
+        font-size: 7rem!important;
+        color: #DE3C4B!important;
+        transition: .2s;
+    }
+    .restauraunt-price {
+        font-size: 2.2rem;
+        margin-right: 2%;
+    }
+    .phone-icon {
+        font-size: 2.2rem;
+    }
+    .restauraunt-tags {
+        /* margin-left: 3%!important; */
+        margin-top: 1vh!important;
+    }
+    .restauraunt-phone {
+        font-size: 1.2rem;
+        margin-top: .5vh;    
+    }
+    .restauraunt-address {
+        font-size: 1.2rem;
+        margin-top: .5vh;   
+    }
+    .restauraunts-details-text {
+        font-size: 1.2rem;
+        margin-top: .5vh;   
+        margin-left: 2%;
+    }
+    .reviews-location-hours-wrapper {
+        width: 85%;
+        margin-left: 7.5%;
+        padding-bottom: 75px;
     }
 }
