--- a/is322-final-project/src/styles/reviewForm.css
+++ b/is322-final-project/src/styles/reviewForm.css
@@ -10,8 +10,10 @@
     margin-left: 5%;
 }
 .profile-icon {
-    font-size: 4rem!important;
     border-radius: 3px;
+    height: 110px;
+    margin-left: -13%;
+    width: 110px;
     color: #d3d1d1;
 }
 .profile-icon-scout {
