--- a/is322-final-project/src/styles/userReview.css
+++ b/is322-final-project/src/styles/userReview.css
@@ -12,6 +12,16 @@
     flex-direction: row;
     box-shadow: 0px 1px 5px rgba(34, 34, 34, 0.3);
     border-radius: 3px;
+    transition: .2s;
+   -moz-transition: .25s ease-in-out;
+   -webkit-transition: .25s ease-in-out;
+}
+.user-review-container:hover {
+    cursor: pointer;
+    transition: .2s;
+   -moz-transition: .25s ease-in-out;
+   -webkit-transition: .25s ease-in-out;
+    box-shadow: 0px 4px 10px rgba(34, 34, 34, 0.3);
 }
 .my-reviews-image-wrapper {
     display: flex;
@@ -19,11 +29,10 @@
     height: 100%;
 }
 .my-reviews-image-wrapper img {
-    height: 100%;
-    width: 100%;
+    height: 150px;
+    width: 150px;
     border-bottom-left-radius: 3px;
     border-top-left-radius: 3px;
-    position: fixed
 }
 .my-reviews-icon {
     font-size: 8rem!important;
