--- a/is322-final-project/src/styles/map/map.css
+++ b/is322-final-project/src/styles/map/map.css
@@ -1,4 +1,5 @@
 .apartment-button {
+    /* color: #323648; */
     color: #DE3C4B;
     z-index: -1!important;
     position: relative;
@@ -32,13 +33,33 @@
     cursor: pointer;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, .6);
 }
+.input-city {
+    /* border: 1px solid red; */
+    border: 2px solid #e9e9e9;
+    padding: 15px;
+    font-size: 1rem;
+    color: #323648;
+    opacity: .7;
+    font-family: 'Lato', Helvetica,Arial , sans-serif;
+}
+.input-city:hover {
+    border: 2px solid #DE3C4B;
+}
 @media (max-width: 600px) {
-    .circle {
+    /* .circle {
         height: 40px!important;
         width: 40px!important;
         margin-top: -1vh;
         margin-right: 0vw;
         position: absolute;
-        margin-left: -10px; /*half the width*/
+        margin-left: -10px; 
+    } */ 
+    .circle {
+        height: 65px!important;
+        width: 65px!important;
+        margin-top: 85vh;
+        margin-right: 0vw;
+        position: fixed;
+        margin-left: -90px; /*half the width*/
     }
 }
