--- a/is322-final-project/src/styles/modal.css
+++ b/is322-final-project/src/styles/modal.css
@@ -57,3 +57,31 @@
     font-family: 'Lato', Helvetica,Arial , sans-serif;
     font-weight: 900;
 }
+.modal-input {
+    border: 1px solid lightgray;
+    padding: 10px;
+    margin-top: 3%;
+    width: 95%;
+    border-radius: 5px;
+    font-size: 1rem;
+    color: #323648;
+    opacity: .7;
+    font-family: 'Lato', Helvetica,Arial , sans-serif;
+}
+.modal-input:hover {
+    border: 1px solid #DE3C4B;
+}
+@media (max-width: 600px) {
+    .modal-wrapper {
+        width: 100%;
+    }
+    .modal-container {
+        width: 85%;
+        margin-top: 80%;
+    }
+    .update-review-button {
+        width: 80%;
+        font-size: 2rem;
+    }
+
+}
