--- a/is322-final-project/src/styles/restaurauntDetails.css
+++ b/is322-final-project/src/styles/restaurauntDetails.css
@@ -31,8 +31,11 @@
     display: flex;
     flex: 1;
     margin-top: -5%;
-    margin-left: 10%;
-    font-size: 85px!important;
+    /* margin-left: 10%; */
+    /* font-size: 65px!important; */
+    font-size: 3rem!important;
+    /* font-size: 7rem; */
+    /* font-size-adjust: 0.58; */
     color: #DE3C4B!important;
     transition: .2s;
 }
@@ -94,6 +97,17 @@
     font-size: 2.3rem!important;
     color: #DE3C4B;
     margin-right: .5vw;
+}
+.favorite-icon-restauraunt-details {
+    font-size: 2.4rem!important;
+    transition: .2s ease-in-out!important;
+}
+.favorite-icon-restauraunt-details:hover {
+    cursor: pointer;
+    margin-left: 3px;
+}
+.save-text {
+    margin-top: 1.8%!important;
 }
 .restauraunt-phone {
     font-size: 1rem;
@@ -207,6 +221,7 @@
         font-size: 1.2rem;
         margin-top: .5vh;    
         margin-left: 2vw;
+        text-align: left;
     }
     .restauraunt-is-open {
         margin-top: 2vh;    
@@ -258,7 +273,9 @@
     }
     .restauraunt-address {
         font-size: 1.2rem;
+        text-align: left;
         margin-top: .5vh;   
+        widtH: 100%;
     }
     .restauraunts-details-text {
         font-size: 1.2rem;
