FIX: remove most errors and console.logs

--- a/is322-final-project/src/styles/restaurauntDetails.css
+++ b/is322-final-project/src/styles/restaurauntDetails.css
@@ -202,8 +202,10 @@
         margin-left: 6vw;    
     }
     .price-rating-tags {
-        /* border: 1px solid red; */
         margin-top: 2vh;    
+    }
+    .restauraunts-details-text {
+        text-align: left!important;
     }
     .restauraunt-phone-wrapper {
         /* border: 1px solid red; */
